# TradingBot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DONE.md  Dockerfile  README.md  REFACTOR_PLAN.md  TODO.md  docker-compose.yml  pyproject.toml  release-please-config.json
.claude/: launch.json  settings.json  settings.local.json
.claude/agents/: nemesis.md  security-analyst.md  security-fixer.md  software-architect.md
.claude/rules/: code-style.md  commits.md  github.md  language.md  project-architecture.md  prose.md
.github/workflows/: release-please.yml
archive/: REFACTOR_PLAN.md  research_config.py  run_multi_symboles.py  teest.ipynb
bibliography/: bibliography.md
bibliography/resources/: README.md
docs/.architecture-design/: README.md
docs/.security-reports/: README.md
kerryghan_paper-trading/: CLAUDE.md  alpaca-test.ipynb  bars.db  btc_rsi_trader.py  config.json  crypto-trader-v0.py  crypto-trader-v1.py  truc.py
lucas-live-trading/: bot.py  constants.py  dashboard.py  engine.py  run_scorer.ps1  scorer.py  seed_fake_data.py
lucas-live-trading/deploy/: README.md
lucas-research/: backtest_rsi_vectorbt.py  run_multi_symboles.py  twelve_data_5min_3ans.py  twelve_data_historique.py
lucas-research/research/: backtest_multi.py  backtest_multi_ML.py  backtest_multi_ML_with_html.py  backtest_multi_with_html.py  backtest_rsi_vectorbt.py  backtest_scorer_oos.py  backtest_topx_portfolio.py  backtest_v2_regime_mr.py  backtest_v2_topx.py  dashboard.py  optimize.py  optimize_topx.py  strategies.py  strategies_ML.py  topx_dashboard.py  twelve_data_5min_3ans.py  twelve_data_historique.py
lucas-trading/: README.md  backtest.py  live.py
lucas-trading/backtest/: dashboard.py  event_driven.py
lucas-trading/core/: broker.py  config.py  constants.py  db.py  engine.py  signals.py
lucas-trading/deploy/: README.md
lucas-trading/live/: __init__.py  bot.py  dashboard.py  scorer.py
lucas-trading/strategies/: __init__.py  vote_mr.py
lucas-trading/tools/: __init__.py  (+2 more)
research/: backtest_multi.py  run_multi_symboles.py
security-reports/: README.md
src/: README.md  backtest.py  live.py
(+109 files in other folders)
