[project]
name = "tradingbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.11.0",
    "dash>=4.1.0",
    "flask>=3.1.3",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
    "vectorbt>=0.28.2",
]
