[project]
name = "tradingbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alpaca-py>=0.43.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.4.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "websocket-client>=1.9.0",
    "anywidget>=0.11.0",
    "dash>=4.1.0",
    "flask>=3.1.3",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
    "vectorbt>=0.28.2",
]