[project]
name = "tradingbot"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alpaca-py>=0.43.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.4.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "websocket-client>=1.9.0",
    "anywidget>=0.11.0",
    "dash>=4.1.0",
    "flask>=3.1.3",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
    "vectorbt>=0.28.2",
    "xgboost>=3.2.0",
    "psycopg[binary]>=3.3.4",
    "gunicorn>=26.0.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.4",
    "pre-commit>=4.6.0",
]

# Commit message linting only. Versioning and CHANGELOG.md are owned by
# release-please (.github/workflows/release-please.yml) — never run `cz bump`.
# The rule this enforces is documented in .claude/rules/commits.md.
[tool.commitizen]
name = "cz_customize"

[tool.commitizen.customize]
schema = "<type>(<scope>)!: <subject>"
schema_pattern = "(?s)(build|chore|ci|docs|feat|fix|perf|refactor|test)(\\((core|backtest|live|strategies|web|tools|deploy|config|docs|infra)\\))?!?: ([^\\n\\r]+)((\\n\\n.*)|(\\s*))?$"
